add: docs handlers test
