# handler/response.go
@@ -42,6 +42,11 @@ type ShowOpeningResponse struct {
 	Data    schemas.OpeningResponse `json:"data"`
 }
 type ListOpeningsResponse struct {
-	Message string                  `json:"message"`
+	Message string                    `json:"message"`
 	Data    []schemas.OpeningResponse `json:"data"`
+}
+
+type UpdateOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
 }
