# handler/showOpening.go
@@ -15,7 +15,7 @@ import (
 // @Accept json
 // @Produce json
 // @Param id query string true "Opening identification"
-// @Sucess 200 {object} ShowOpeningResponse
+// @Success 200 {object} ShowOpeningResponse
 // @Failure 400 {object} ErrorResponse
 // @Failure 404 {object} ErrorResponse
 // @Router /opening [get]
